# pdftrans

./: .env.example  Cargo.toml  README.md  run.sh
src/: config.rs  index.html  main.rs  pdf.rs  state.rs  translate.rs
tasks/: prd-parallel-processing.md  prd-pdf-translator-v2.md  prd-pdf-translator.md  prd-ui-improvements-v2.md
